Selected animation channel visibility #92612

Closed
opened 2021-10-29 14:36:33 +02:00 by slwk1d · 8 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-10-28 10:01, hash: 5f1107ffaf
Worked: (newest version of Blender that worked as expected)

Short description of error
With the new theme, the difference between selected and not selected channels in the animation editors is almost imperceptible.
contr.png

Exact steps for others to reproduce the error
[Based on the default startup]

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-10-28 10:01, hash: `5f1107ffaf` Worked: (newest version of Blender that worked as expected) **Short description of error** With the new theme, the difference between selected and not selected channels in the animation editors is almost imperceptible. ![contr.png](https://archive.blender.org/developer/F11597435/contr.png) **Exact steps for others to reproduce the error** [Based on the default startup]
Author

Added subscriber: @Slowwkidd

Added subscriber: @Slowwkidd
Member

Added subscribers: @pablovazquez, @lichtwerk

Added subscribers: @pablovazquez, @lichtwerk
Member

@pablovazquez : can you comment? (this seems to be an intended change, so this should probably not fill this bugtracker -- but will let Pablo have a word before closing)

@pablovazquez : can you comment? (this seems to be an intended change, so this should probably not fill this bugtracker -- but will let Pablo have a word before closing)
Author

I'm aware of this, but I decided to report it as there are other reports for this theme change that were all confirmed: https:*developer.blender.org/T92590, https:*developer.blender.org/T92581, https://developer.blender.org/T92595.

I'm aware of this, but I decided to report it as there are other reports for this theme change that were all confirmed: https:*developer.blender.org/T92590, https:*developer.blender.org/T92581, https://developer.blender.org/T92595.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pablo Vazquez self-assigned this 2021-11-01 11:34:01 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by e65230f0c0

This issue was referenced by e65230f0c03c60f4e7b6561dcec8928992861a59
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92612
No description provided.